--- a/about.html
+++ b/about.html
@@ -1,211 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta
-			http-equiv="X-UA-Compatible"
-			content="IE=edge"
-		/>
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1.0"
-		/>
-		<link
-			rel="shortcut icon"
-			href="media/bunny-icon.png"
-		/>
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-			crossorigin="anonymous"
-		/>
-		<link
-			rel="stylesheet"
-			href="css/style.css"
-		/>
-		<meta
-			name="keywords"
-			content="charles clark, software development, projects, correlation one, developer site, about, about me"
-		/>
-		<meta
-			name="description"
-			content="My name is Charles Clark. I'm training in Software Development. Come find out more about me and watch my progress as I gather new skills and show off my hard work."
-		/>
-		<style>
-			h1 {
-				text-indent: 0px;
-			}
-		</style>
-		<title>Charles Clark - About</title>
-	</head>
 
-	<body>
-		<!--Header/Nav-->
-		<header class="navbar navbar-expand-md navbar-dark">
-			<div class="container">
-				<label
-					for="navbar-owner"
-					class="navbar-brand"
-				>
-					<img
-						src="media/bunny-icon.png"
-						alt="bunny"
-						class="icon"
-					/>Charles Clark
-				</label>
-				<button
-					class="navbar-toggler"
-					data-bs-toggle="collapse"
-					data-bs-target="#navbar"
-					aria-control="navbar"
-					aria-expanded="false"
-					aria-label="toggle navigation"
-				>
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<nav
-					class="collapse navbar-collapse"
-					id="navbar"
-				>
-					<ul class="navbar-nav gap-2 me-auto mb-2 mb-md-0">
-						<li class="nav-item">
-							<a
-								class="nav-link"
-								href="index.html"
-								>Home</a
-							>
-						</li>
-						<li class="nav-item">
-							<a
-								class="nav-link active"
-								href="about.html"
-								>About</a
-							>
-						</li>
-						<li class="nav-item">
-							<a
-								class="nav-link"
-								href="projects.html"
-								>Projects</a
-							>
-						</li>
-						<li class="nav-item">
-							<a
-								class="nav-link"
-								href="contact.html"
-								>Contact</a
-							>
-						</li>
-					</ul>
-					<form
-						role="search"
-						class="d-flex"
-					>
-						<input
-							type="text"
-							class="search me-2"
-							aria-label="Search"
-							id="search"
-							placeholder=" Search"
-						/>
-						<button
-							for="search"
-							type="submit"
-							class="btn btn-secondary"
-						>
-							Go
-						</button>
-					</form>
-				</nav>
-			</div>
-		</header>
-		<!--About-->
-		<main>
-			<div>
-				<blockquote>
-					<img
-						src="media/me.jpg"
-						class="img-profile"
-						alt="Profile Photo."
-					/>
-					<h1>About Me</h1>
-					<p>
-						My name is Charles, I'm 32 and I've had prior experience with some
-						minor web coding (HTML and CSS). Throughout my twenties, I co-hosted
-						and ran a few fan based art and writing fests online which gave me
-						tons of experience in various areas including: sending out emails,
-						designing advertising and web design, pairing up partners, dealing
-						with backend data, releasing news and event submissions, moderating
-						discord chats, and much more.
-					</p>
-					<img
-						src="media/library.jpg"
-						class="img-thumbnail"
-						alt="library"
-					/>
-					<p>
-						For fun, my favorite hobbies are to draw, paint, read, write, edit,
-						code, game, crochet, knit, and above all of that, I love to learn.
-						The core theme or reason for my enjoyment is creation. I often jump
-						back and forth on what my current all-time focus is when releasing
-						everyday stress, but I always come back around to them after losing
-						interest for a while.
-					</p>
-					<p>
-						I started learning at Correlation One for Software Development
-						mid-July. My current place of employment offered a full free ride
-						while I could learn some valuable skills. I thought why not give it
-						a go. So now here I am, enjoying challenging myself with new ideas,
-						resources, tools, and skills. Learning new concepts can be difficult
-						at times, but with a drive to understand and focused practice it's
-						easy to pick up, while being super rewarding.
-					</p>
-					<p>
-						So far, I have learned more advanced HTML and CSS with tool kits
-						such as Bootstrap and SASS. I've been introduced and have started
-						using VS Code to work on my projects and Node.js to help compile
-						SASS files. Just recently, we've been introduced to gitHub and the
-						terminal for uploading our site and projects. I'm excited to see how
-						this will help us in the future.
-					</p>
-					<p>
-						In the upcoming weeks we will get into working with WordPress (which
-						I have a little familarity with), Javascript, and some
-						Frontend-Frameworks. I have read a bit of web based Javascript, and
-						I've had an animation class in high school that worked with some
-						basic java, so I won't be in completely new territory, however I do
-						know that javascript is a vast language and it's definitely going to
-						be a rollercoaster of frustration, comprehension, and rewarding
-						feelings. Even so, I'm excited to learn new things and see where
-						this new knowledge can lead me.
-					</p>
-					<div class="card-footer">
-						<span>
-							Library Photo by
-							<a
-								href="https://unsplash.com/@itfeelslikefilm?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
-								>🇸🇮 Janko Ferlič</a
-							>
-							on
-							<a
-								href="https://unsplash.com/photos/sfL_QOnmy00?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
-								>Unsplash</a
-							></span
-						>
-					</div>
-				</blockquote>
-			</div>
-		</main>
-		<!--Footer-->
-		<footer>
-			<p class="end">&copy; 2023 Charles Clark. All rights reserved.<br /></p>
-		</footer>
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="shortcut icon" href="media/bunny-icon.png" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+	<link rel="stylesheet" href="css/style.css" />
+	<meta name="keywords"
+		content="charles clark, software development, projects, correlation one, developer site, about, about me" />
+	<meta name="description"
+		content="My name is Charles Clark. I'm training in Software Development. Come find out more about me and watch my progress as I gather new skills and show off my hard work." />
+	<title>Charles Clark - About</title>
+</head>
 
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-			crossorigin="anonymous"
-		></script>
-	</body>
+<body>
+	<!--Header/Nav-->
+	<header class="navbar navbar-expand-md navbar-dark">
+		<div class="container">
+			<label for="navbar-owner" class="navbar-brand">
+				<img src="media/bunny-icon.png" alt="bunny" class="icon" />Charles Clark
+			</label>
+			<button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar" aria-control="navbar"
+				aria-expanded="false" aria-label="toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<nav class="collapse navbar-collapse" id="navbar">
+				<ul class="navbar-nav gap-2 me-auto mb-2 mb-md-0">
+					<li class="nav-item">
+						<a class="nav-link" href="index.html">Home</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							About
+						  </a>
+						<ul class="dropdown-menu bg-dark me-auto, mb-2, mb-lg-0, me-2 ps-3">
+							<li class="nav-item"><a href="about.html" class="nav-link active"><h1>About Me</h1></a></li>
+							<li class="nav-item"><a href="resume.html" class="nav-link">My resume</a></li>
+						</ul>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="projects.html">Projects</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="contact.html">Contact</a>
+					</li>
+				</ul>
+				<form role="search" class="d-flex">
+					<input type="text" class="search me-2" aria-label="Search" id="search" placeholder=" Search" />
+					<button for="search" type="submit" class="btn btn-secondary">
+						Go
+					</button>
+				</form>
+			</nav>
+		</div>
+	</header>
+	<!--About-->
+	<main>
+		<div>
+			<blockquote>
+				<img src="media/me.jpg" class="img-profile" alt="Profile Photo." />
+				<h2 class="img-left-header">About Me</h2>
+				<p>
+					My name is Charles, I'm 32 and I've had prior experience with some
+					minor web coding (HTML and CSS). Throughout my twenties, I co-hosted
+					and ran a few fan based art and writing fests online which gave me
+					tons of experience in various areas including: sending out emails,
+					designing advertising and web design, pairing up partners, dealing
+					with backend data, releasing news and event submissions, moderating
+					discord chats, and much more.
+				</p>
+				<img src="media/library.jpg" class="img-thumbnail-right" alt="library" />
+				<p>
+					<span class="boldcolor">
+						For fun, my favorite hobbies are to draw, paint, read, write,
+						edit, code, game, crochet, knit, and above all of that, I love to
+						learn.
+					</span>
+					The core theme or reason for my enjoyment is creation. I often jump
+					back and forth on what my current all-time focus is when releasing
+					everyday stress, but I always come back around to them after losing
+					interest for a while.
+				</p>
+				<p>
+					I started learning at Correlation One for Software Development
+					mid-July. My current place of employment offered a full free ride
+					while I could learn some valuable skills. I thought why not give it
+					a go. So now here I am, enjoying challenging myself with new ideas,
+					resources, tools, and skills. Learning new concepts can be difficult
+					at times, but with a drive to understand and focused practice it's
+					easy to pick up, while being super rewarding.
+				</p>
+				<img src="media/javascript.jpg" class="img-thumbnail-left" alt="javascript, html, css books" />
+				<p>
+					So far, I have learned more advanced HTML and CSS with tool kits
+					such as Bootstrap and SASS. I've been introduced and have started
+					using VS Code to work on my projects and Node.js to help compile
+					SASS files. Just recently, we've been introduced to gitHub and the
+					terminal for uploading our site and projects. I'm excited to see how
+					this will help us in the future.
+				</p>
+				<p>
+					In the upcoming weeks we will get into working with WordPress (which
+					I have a little familarity with), Javascript, and some
+					Frontend-Frameworks. I have read a bit of web based Javascript, and
+					I've had an animation class in high school that worked with some
+					basic java, so I won't be in completely new territory, however I do
+					know that javascript is a vast language and it's definitely going to
+					be a rollercoaster of frustration, comprehension, and rewarding
+					feelings. Even so, I'm excited to learn new things and see where
+					this new knowledge can lead me.
+				</p>
+				<div class="card-footer">
+					<span>
+						Library Photo by
+						<a
+							href="https://unsplash.com/@itfeelslikefilm?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">🇸🇮
+							Janko Ferlič</a>
+						on
+						<a
+							href="https://unsplash.com/photos/sfL_QOnmy00?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></span>
+					| Books Photo by <a href="https://unsplash.com/@grakozy?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Greg Rakozy</a> on <a href="https://unsplash.com/photos/vw3Ahg4x1tY?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+				</div>
+			</blockquote>
+		</div>
+	</main>
+	<!--Footer-->
+	<footer>
+		<p class="end">&copy; 2023 Charles Clark. All rights reserved.<br /></p>
+	</footer>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+		crossorigin="anonymous"></script>
+</body>
+
 </html>
