--- a/index.html
+++ b/index.html
@@ -1,149 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta
-			http-equiv="X-UA-Compatible"
-			content="IE=edge"
-		/>
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1.0"
-		/>
-		<link
-			rel="shortcut icon"
-			href="media/bunny-icon.png"
-		/>
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-			crossorigin="anonymous"
-		/>
-		<link
-			rel="stylesheet"
-			href="css/style.css"
-		/>
-		<meta
-			name="keywords"
-			content="charles clark, software development, projects, correlation one, developer site"
-		/>
-		<meta
-			name="description"
-			content="I'm a Software Developor in training. Follow my journey as I develop some impressive skills."
-		/>
-		<title>Charles Clark</title>
-	</head>
 
-	<body>
-		<!--Header/Nav-->
-		<header class="navbar navbar-expand-md navbar-dark">
-			<div class="container">
-				<label
-					for="navbar-owner"
-					class="navbar-brand"
-				>
-					<img
-						src="media/bunny-icon.png"
-						alt="bunny"
-						class="icon"
-					/>Charles Clark
-				</label>
-				<button
-					class="navbar-toggler"
-					data-bs-toggle="collapse"
-					data-bs-target="#navbar"
-					aria-control="navbar"
-					aria-expanded="false"
-					aria-label="toggle navigation"
-				>
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<nav
-					class="collapse navbar-collapse"
-					id="navbar"
-				>
-					<ul class="navbar-nav gap-2 me-auto mb-2 mb-md-0">
-						<li class="nav-item">
-							<a
-								class="nav-link active"
-								href="index.html"
-								>Home</a
-							>
-						</li>
-						<li class="nav-item">
-							<a
-								class="nav-link"
-								href="about.html"
-								>About</a
-							>
-						</li>
-						<li class="nav-item">
-							<a
-								class="nav-link"
-								href="projects.html"
-								>Projects</a
-							>
-						</li>
-						<li class="nav-item">
-							<a
-								class="nav-link"
-								href="contact.html"
-								>Contact</a
-							>
-						</li>
-					</ul>
-					<form
-						role="search"
-						class="d-flex"
-					>
-						<input
-							type="text"
-							class="search me-2"
-							aria-label="Search"
-							id="search"
-							placeholder=" Search"
-						/>
-						<button
-							for="search"
-							type="submit"
-							class="btn btn-secondary"
-						>
-							Go
-						</button>
-					</form>
-				</nav>
-			</div>
-		</header>
-		<!--Intro-->
-		<main>
-			<div>
-				<blockquote>
-					<h1>Software Development</h1>
-					<p>
-						Hellow and welcome. My name's Charles, and I built this site to show
-						off my progress throughout my course with Correlation One's Software
-						Development Program. If you stick around long enough, you'll watch
-						this site transform as my knowledge base in class increases.
-					</p>
-					<p>
-						The navigation is just above. If you explore, you'll find out more
-						about me, be able to view some of my projects, and contact me. Go
-						ahead and check out the site more.
-					</p>
-				</blockquote>
-			</div>
-		</main>
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="shortcut icon" href="media/bunny-icon.png" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+	<link rel="stylesheet" href="css/style.css" />
+	<meta name="keywords" content="charles clark, software development, projects, correlation one, developer site" />
+	<meta name="description"
+		content="I'm a Software Developor in training. Follow my journey as I develop some impressive skills." />
+	<title>Charles Clark</title>
+</head>
 
-		<!--Footer-->
-		<footer>
-			<p class="end">&copy; 2023 Charles Clark. All rights reserved.<br /></p>
-		</footer>
+<body>
+	<!--Header/Nav-->
+	<header class="navbar navbar-expand-md navbar-dark">
+		<div class="container">
+			<label for="navbar-owner" class="navbar-brand">
+				<img src="media/bunny-icon.png" alt="bunny" class="icon" />Charles Clark
+			</label>
+			<button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar" aria-control="navbar"
+				aria-expanded="false" aria-label="toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<nav class="collapse navbar-collapse" id="navbar">
+				<ul class="navbar-nav gap-2 me-auto mb-2 mb-md-0">
+					<li class="nav-item">
+						<a class="nav-link active" href="index.html"><h1>Home</h1></a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							About
+						  </a>
+						<ul class="dropdown-menu bg-dark me-auto, mb-2, mb-lg-0, me-2 ps-3">
+							<li class="nav-item"><a href="about.html" class="nav-link">About Me</a></li>
+							<li class="nav-item"><a href="resume.html" class="nav-link">My resume</a></li>
+						</ul>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="projects.html">Projects</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="contact.html">Contact</a>
+					</li>
+				</ul>
+				<form role="search" class="d-flex">
+					<input type="text" class="search me-2" aria-label="Search" id="search" placeholder=" Search" />
+					<button for="search" type="submit" class="btn btn-secondary">
+						Go
+					</button>
+				</form>
+			</nav>
+		</div>
+	</header>
+	<!--Intro-->
+	<main>
+		<div>
+			<blockquote>
+				<h2>Software Development</h2>
+				<p>
+					Hellow and welcome. My name's Charles, and I built this site to show
+					off my progress throughout my course with Correlation One's Software
+					Development Program. If you stick around long enough, you'll watch
+					this site transform as my knowledge base in class increases.
+				</p>
+				<p>
+					The navigation is just above. If you explore, you'll find out more
+					about me, be able to view some of my projects, and contact me. Go
+					ahead and check out the site more.
+				</p>
+			</blockquote>
+		</div>
+	</main>
 
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-			crossorigin="anonymous"
-		></script>
-	</body>
+	<!--Footer-->
+	<footer>
+		<p class="end">&copy; 2023 Charles Clark. All rights reserved.<br /></p>
+	</footer>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+		crossorigin="anonymous"></script>
+</body>
+
 </html>
