--- a/about.html
+++ b/about.html
@@ -74,12 +74,9 @@
 				</p>
 				<img src="media/library.jpg" class="img-thumbnail-right" alt="library" />
 				<p>
-					<span class="boldcolor">
-						For fun, my favorite hobbies are to draw, paint, read, write,
-						edit, code, game, crochet, knit, and above all of that, I love to
-						learn.
-					</span>
-					The core theme or reason for my enjoyment is creation. I often jump
+					For fun, my favorite hobbies are to draw, paint, read, write,
+					edit, code, game, crochet, knit, and above all of that, I love to
+					learn. The core theme or reason for my enjoyment is creation. I often jump
 					back and forth on what my current all-time focus is when releasing
 					everyday stress, but I always come back around to them after losing
 					interest for a while.
