Did not realize part of the project was going to make pages public. Removed personal information.

--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@
 		<p class="end">
 			&copy; 2023 Charles Clark. All rights reserved.<br />
 			Fort Worth, Tx <br />
-			claramaq1@gmail.com
+			charlesclark@charlesclark.com
 		</p>
 	</footer>
 
