--- a/resume.html
+++ b/resume.html
@@ -70,8 +70,8 @@
             <blockquote>
                 <h2>Charles Clark</h2>
                 <span class="resume-line">
-                    <a href="mailto:claramaq1@gmail.com">claramaq1@gmail.com</a> |
-                    <a href="tel:+16822402506">(682) 240-2506</a> |
+                    <a href="mailto:claramaq1@gmail.com">charlesclark@charlesclark.com</a> |
+                    <a href="tel:+18885551234">(888) 555-1234</a> |
                     <a href="http://linkedin.com/charles-rae-clark">LinkedIn.com/charles-rae-clark</a>
                     |
                     <address>Ft Worth, TX 76108</address>
