--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<blockquote>
 				<h2>Software Development</h2>
 				<p>
-					Hellow and welcome. My name's Charles, and I built this site to show
+					Hello and welcome. My name's Charles, and I built this site to show
 					off my progress throughout my course with Correlation One's Software
 					Development Program. If you stick around long enough, you'll watch
 					this site transform as my knowledge base in class increases.
